projects/Media/docroot/assets/css/expressco/cartcontent.css
/* ... */
.eTippingEnabled #subtotalbox2 .subtotal__rowcell-left{
	display:block;
	text-align: center;
	width:100%;
	clear:both;
}
.eTippingEnabled #subtotalbox2 .subtotal__rowcell-left.st_label_ssOrderTotal{
	text-align: left;
}
.eTippingEnabled #subtotalbox2 #st_label_youSaved, .eTippingEnabled #subtotalbox2 .subtotal__rowcell-mid.st_val_youSaved{
	display:inline;
}
.eTippingEnabled #subtotalbox2 #st_label_youSaved .strl_text, .eTippingEnabled #subtotalbox2 .subtotal__rowcell-mid.st_val_youSaved{
	font-size:9pt;
	color: #DF0000;
}
.eTippingEnabled .cartsection__totalwrapper{
	width: 100%;
}
.eTippingEnabled .cartsection__totalwrapper .subtotal__rowcell-left {
	min-width: auto;
	width: 170px;
	margin-right: 20px;
	margin-bottom: 4px;
	line-height: 21px;
	white-space: normal;
}

.eTippingEnabled .cartsection__totalwrapper #optionaltip.subtotal__rowcell-left {
    min-width: 156px;
	display: table;
}
.eTippingEnabled form .subtotal__rowcell-left{
	float:left;
}
.eTippingEnabled #subtotalbox2 .strl_text{
	font-weight:normal;
	white-space:nowrap;
	background-color: transparent;
    color: rgb(102,102,102);
    text-transform: capitalize;
}

.eTippingEnabled .subtotal__rowcell-mid{
	font-weight:bold;
}
.eTippingEnabled #subtotalbox1 .subtotal__rowcell-mid{
	/*min-width: 85px;*/

	white-space:nowrap;

    text-align: left;
    width: auto;
}
.eTippingEnabled #subtotalbox2 .subtotal__rowcell-mid{
	color: #333333;
	font-size: 27px;
	font-weight: 700;
	padding-left: 0px;
}
.eTippingEnabled .subtotal__row .subtotal__rowcell-right{
	position:absolute;
}

.eTippingEnabled #subtotalbox1 .subtotal__rowcell-mid, 
.eTippingEnabled .subtotal__row .subtotal__rowcell-right{
	position: static;
	vertical-align: bottom;
	padding: 0;
	line-height: 21px;
	margin-bottom: 4px;
}

.eTippingEnabled .subtotal__rowcell-left,
.eTippingEnabled .subtotal__rowcell-mid,
.eTippingEnabled .subtotal__rowcell-right{
  font-size:16px;
}

[fdform="etip"] [fdform-error] {
  display: none;
}

.eTippingEnabled #tipDropdown, .eTippingEnabled #tipTextBox{
	border: 2px solid rgb(194, 194, 194);
	width: 125px;
	padding-left:5px;
	color: #333333;
    font-size: 15px;
    font-weight: 400;
    -webkit-appearance: none;
	-moz-appearance: none;
	appearance: none;
    /*background: transparent url('http://dfoolong.github.io/assets/img/input-arrow-down.png') 97% center no-repeat;*/
}

.eTippingEnabled #tipDropdown, .eTippingEnabled #tipApply, .eTippingEnabled #tipApplied, .eTippingEnabled #tipTextBox{
	width: 129px;
	box-sizing: border-box;
}
.eTippingEnabled #tipDropdown{
	/*background: transparent url('/media/images/layout/input-arrow-down.png') 97% center no-repeat;*/
	background: transparent url('/media/images/layout/input-arrow-down.png') no-repeat 97% center;
	border-radius: 0px;
	-webkit-border-radius: 0px;
	-moz-border-radius: 0px;
}
.eTippingEnabled #tipDropdown:focus, .eTippingEnabled #tipTextBox:focus{
	border-color: #4FA157;
}
.eTippingEnabled #tipTextBox::-ms-clear {
    display: none;
}

.eTippingEnabled #tipApply, .eTippingEnabled #tipApplied{
	border-radius: 3px;
	-webkit-border-radius: 3px;
	-moz-border-radius: 3px;
	text-shadow: none;
	/* font-weight: normal; */
	font-size: 12px;
	font-weight: 700;
	margin-top: 6px;
	padding-top: 7px;
	padding-bottom: 7px;
	height: 28px;
}

.eTippingEnabled #tipAppliedTick{
  position: absolute;
  margin-top: 10px;
  margin-left: 5px;
}

.eTippingEnabled .rowcell-colon-right:after{
  content: " ";
  white-space: pre;
}
.eTippingEnabled .strl_text:after, .cartsection__total .strl_text:after, .cartsection__tax .strl_text:after{
  content:":";
}

.eTippingEnabled .cartsection__total,
.eTippingEnabled .cartsection__tax{
  font-size:16px;
  font-weight:normal;
}

.eTippingEnabled .rowcontent-free-with-pass{
	margin-left:0;
	text-align:left;
	float:right;
  width: auto;
}

.eTippingEnabled .orderSummary{
	padding-top: 20px;
	width: 400px;
    float: right;
	font-size: 16px;
	margin-bottom: 40px;
}
.eTippingEnabled .orderSummary .cartsection__total{
	margin-top:10px;
	margin-bottom:10px;
}
.eTippingEnabled .strl_text{
	font-size:16px;
}
.eTippingEnabled #subtotalbox1 .strl_text, .eTippingEnabled .tooltip_holder, .icon-info-before{
	display: table-cell;
}
.eTippingEnabled .orderSummary .strl_text{

}
.eTippingEnabled .orderSummary .subtotal__rowcell-mid{
	width: 140px;
    text-align: left;
}
.eTippingEnabled .SSorderTotal{
	color: white;
	text-align:right;
	text-transform:uppercase;
	font-weight:bold;
	font-size: 14pt;
	padding: 10px;
	background-color: #6AAA6D;
}
.eTippingEnabled #subtotalbox2 .SSorderTotal{
	background-color: transparent;
    color: rgb(51,51,51);
    text-transform: capitalize;
}
.eTippingEnabled .free-link-holder{
	/*position: absolute;*/
	/*margin-left: 100px;*/
}

.eTippingEnabled .cartsection__tax form .strl_text, .cartsection__tax form a.tooltip-small{
	float:none;
}
.eTippingEnabled a.tooltip-small{
	margin-right:5px;
	cursor:pointer;
}
.eTippingEnabled span.tooltip-small, .eTippingEnabled a.tooltip-small{
	top: -5px;
}

.eTippingEnabled a.tooltip-small:hover, .eTippingEnabled a.tooltip-small:focus{
	/*background-color:rgb(157, 157, 157);*/
}

.eTippingEnabled #toolTipTextBox{
    margin-left: -320px;
    margin-top: -68px;
    width:440px;
    padding:13px 18px 13px 18px;
}
.eTippingEnabled #toolTipTextBox a, .eTippingEnabled .tooltip a{
	text-decoration: underline;
}
.eTippingEnabled #toolTipTextBox:before {
	-webkit-transform: rotate(45deg);
	-ms-transform: rotate(45deg);
	transform: rotate(45deg);
	background-color: #FFFFFF;
	width: 15px;
	height: 15px;
	border-top: #999 1px solid;
	border-right: #999 1px solid;
	content: " ";
	position: absolute;
	left: 468px;
	top: 45px;
}

#subtotalbox2 .row-size-big .subtotal__rowcell-mid.st_val{
	text-align: left;
}

.eTippingEnabled select::-ms-expand {
    display: none;
}
.st_val_statebottledeposit{
	/*display:none;*/

}
.st_val_statebottledeposit:first-of-type{
/*#st_val_statebottledeposit{*/
	display:inline-block!important;

}
/* ... */

